--- a/style.css
+++ b/style.css
@@ -1,15 +1,201 @@
 @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap");
+:root {
+  --Light-red: hsl(0, 100%, 67%);
+  --Orangey-yellow: hsl(39, 100%, 56%);
+  --Green-teal: hsl(166, 100%, 37%);
+  --Cobalt-blue: hsl(234, 85%, 45%);
+
+  --Light-slate-blue-background: hsl(252, 100%, 67%);
+  --Light-royal-blue-background: hsl(241, 81%, 54%);
+  --Violet-blue-circle: hsla(256, 72%, 46%, 1);
+  --Persian-blue-circle: hsla(241, 72%, 46%, 0);
+
+  --White: hsl(0, 0%, 100%);
+  --Pale-blue: hsl(221, 100%, 96%);
+  --Light-lavender: hsl(241, 100%, 89%);
+  --Dark-gray-blue: hsl(224, 30%, 27%);
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Hanken Grotesk", sans-serif;
 }
-
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--Pale-blue);
+}
+.card {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px 0px;
+  max-width: 650px;
+  display: flex;
+  background-color: var(--White);
+  border-radius: 2rem;
+  margin: 2rem;
+}
+.results {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  text-align: center;
+  width: 50%;
+  padding: 2rem 3rem;
+  background: linear-gradient(
+    to bottom,
+    var(--Light-slate-blue-background),
+    var(--Light-royal-blue-background)
+  );
+  border-radius: 2rem;
+}
+.results h1 {
+  color: var(--Light-lavender);
+}
+.circle {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: linear-gradient(
+    to bottom,
+    var(--Violet-blue-circle),
+    var(--Persian-blue-circle)
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  line-height: 3rem;
+}
+.circle h2 {
+  font-size: 60px;
+  color: var(--White);
+  margin-top: 2rem;
+}
+.circle p {
+  color: var(--Light-lavender);
+}
+.results h3 {
+  color: var(--White);
+  font-size: 24px;
+}
+.results p {
+  color: var(--Light-lavender);
+  margin-bottom: 1rem;
+}
+.summary {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 50%;
+  padding: 2rem;
+}
+.summary h1 {
+  margin-right: auto;
+}
+.contents {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+.badge {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  border-radius: 10px;
+}
+.row:nth-child(1) {
+  background: hsla(0, 100%, 67%, 0.2);
+}
+.row:nth-child(1) .badge p {
+  color: var(--Light-red);
+}
+.row:nth-child(2) {
+  background: hsla(39, 100%, 56%, 0.2);
+}
+.row:nth-child(2) .badge p {
+  color: var(--Orangey-yellow);
+}
+.row:nth-child(3) {
+  background: hsla(166, 100%, 37%, 0.2);
+}
+.row:nth-child(3) .badge p {
+  color: var(--Green-teal);
+}
+.row:nth-child(4) {
+  background: hsla(234, 85%, 45%, 0.2);
+}
+.row:nth-child(4) .badge p {
+  color: var(--Cobalt-blue);
+}
+.row {
+  color: gray;
+}
+.row p b {
+  color: var(--Dark-gray-blue);
+}
+button {
+  margin-top: 1rem;
+  padding: 1rem;
+  background: var(--Dark-gray-blue);
+  border: none;
+  color: white;
+  border-radius: 2rem;
+  font-size: 18px;
+  cursor: pointer;
+}
+button:hover {
+  background: linear-gradient(
+    to bottom,
+    var(--Light-slate-blue-background),
+    var(--Light-royal-blue-background)
+  );
+}
 .attribution {
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width:600px) {
+  .card {
+    flex-direction: column;
+    margin: 0;
+    border-radius: 0;
+    min-height: 100vh;
+    margin-bottom: 1rem;
+  }
+  .results {
+    width: 100%;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-right-radius: 2rem;
+    margin: 0;
+  }
+  .summary {
+    width: 100%;
+    padding: .5rem 1rem;
+    gap: .5rem;
+  }
+  .summary h1 {
+    margin: 1rem;
+  }
+  .contents {
+    gap: 1rem;
+    margin: 0 .9rem;
+  }
+  button {
+    margin-bottom: 1rem;
+  }
 }
