--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: var(--Pale-blue);
 }
 .card {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px 0px;
@@ -168,7 +167,7 @@ button:hover {
   color: hsl(228, 45%, 44%);
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
   .card {
     flex-direction: column;
     margin: 0;
@@ -185,15 +184,15 @@ button:hover {
   }
   .summary {
     width: 100%;
-    padding: .5rem 1rem;
-    gap: .5rem;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
   }
   .summary h1 {
     margin: 1rem;
   }
   .contents {
     gap: 1rem;
-    margin: 0 .9rem;
+    margin: 0 0.9rem;
   }
   button {
     margin-bottom: 1rem;
