--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: white;
 }
 .card {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px 0px;
